# aura

./: .release-please-manifest.json  1d36ea7fa66cebe4.wasm  404.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  index.html  markdown-page.html  playground.html  refactor_issues.md  release-please-config.json  rust-toolchain.toml  sitemap.xml
.agents/rules/: git-rules.md  plan-execution.md
.github/workflows/: ci.yml  publish-wasm.yml  release.yml
assets/css/: styles.187e61ed.css  styles.e9f117a6.css
assets/js/: 0058b4c6.579bc9c8.js  0c714c36.4eca463e.js  0ce74438.dd3d17ab.js  13b1e09b.d7545f31.js  18386582.0b77d9ae.js  1df93b7f.9eb08c80.js  2727a981.b43efaf9.js  2c2382bb.79e0edc7.js  42533d75.3e1b88dc.js  45ec660b.7c448e15.js  4c10da75.ecf95b36.js  50b597db.31e57709.js  54d78223.0d55ea31.js  5cc5fa86.aaf02794.js  5df0a02d.c3db1103.js  63fbfde5.38c21dd4.js  7bcf7d2d.0632f5f7.js  7f00a3aa.5e1d9c4f.js  831caa9d.2e53e0f9.js  8de346d4.f9aafc1f.js  8e4b11f3.d45e8664.js  93eda520.51a73691.js  9c1375d3.ca3c8dd7.js  a09c2993.a46d6530.js  a381ea0f.d29f7eb6.js  aba32af7.fc640b48.js  b7f604ec.1e6247bd.js  c40f96dd.1c8437a8.js  c8245f4f.2b69d5f1.js  cd56585e.3c6e6be5.js  cf039ed3.6f88843b.js  e1eab238.5b1f49e3.js  e90e0578.467af479.js  f385f8e0.49238828.js  fb6ebc1d.dd5703c1.js  main.6acce284.js  runtime~main.e8e0afd0.js
docs/: RELEASE.md  advanced-concepts.html  faq-and-troubleshooting.html  internals-and-architecture.html  introduction.html  syntax.md  tooling-and-cli.html  union-types.md
docs/category/: 2-getting-started.html  3-language-basics.html  4-object-oriented-programming.html  7-standard-library.html
docs/getting-started/: editor-setup.html  installation.html  next-steps.html  your-first-program.html
docs/language-basics/: comments.html  control-flow.html  enums.html  error-handling.html  functions-and-scope.html  import-export.html  operators.html  types.html  variables.html
docs/oop/: classes-and-objects.html  interfaces.html
docs/standard-library/: array.html  core.html  date.html  fs.html  http.html  math.html  net.html  string.html
editors/vscode/: README.md  language-configuration.json  package.json
scripts/: build-wasm.sh  install.sh  pre-commit.sh  release.sh  setup-hooks.sh  test-wasm.sh  uninstall.sh
src/: lib.rs  main.rs
src/lsp/: handler.rs  server.rs
src/runtime/: runtime.c
stdlib/std/: array.aura  core.aura  date.aura  fs.aura  http.aura  math.aura  net.aura  string.aura  timer.aura
tests/: e2e.rs
tests/docker/: x86_64_unknown_linux_gnu.Dockerfile
tests/e2e/: 02_variables_inference.aura  03_arithmetic.aura  09_classes_basic.aura  10_classes_methods.aura  12_mutation_loop.aura  15_loop_sum.aura  16_unary_negation.aura  19_function_returning_string.aura  20_class_method_chain.aura  21_template_literal.aura  22_async_test.aura  25_try_catch_nested.aura  30_stdlib_string_array.aura  41_http_client.aura  42_http_server.aura  44_stdlib_date.aura  45_stdlib_timer.aura  46_stdlib_interval.aura  (+3 more)
todos/: plan3_phase2.md  plan3_phase3.md  plan3_phase4.md  plan4_phase1.md  plan4_phase4.md
website/: .eslintrc.js  .gitignore  .prettierignore  docusaurus.config.ts  package.json
(+167 files in other folders)
