[package.metadata.release]
tag-name = "v{{version}}"
push = true
publish = false
pre-release-commit-message = "chore(release): v{{version}}"
pre-release-hook = [
    "git",
    "cliff",
    "--tag",
    "{{version}}",
    "-o",
    "CHANGELOG.md",
]

[package]
name = "aura"
version = "0.2.9"
edition = "2021"
rust-version = "1.94"
description = "Aura programming language toolchain (compiler, interpreter, LSP)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phamtanminhtien/aura"
homepage = "https://github.com/phamtanminhtien/aura"
documentation = "https://github.com/phamtanminhtien/aura#readme"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
logos = "0.14"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.183"
chrono = "0.4"
