[package.metadata.release]
tag-name = "v{{version}}"
push = true
publish = false
pre-release-commit-message = "chore(release): v{{version}}"
pre-release-hook = [
    "git",
    "cliff",
    "--tag",
    "{{version}}",
    "-o",
    "CHANGELOG.md",
]

[package]
name = "aura"
version = "0.2.16"
edition = "2021"
rust-version = "1.94"
description = "Aura programming language toolchain (compiler, interpreter, LSP)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/auraspace/aura"
homepage = "https://github.com/auraspace/aura"
documentation = "https://github.com/auraspace/aura#readme"

# cdylib is required by wasm-pack; rlib keeps the native binary target working.
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
logos = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

# wasm-bindgen is only pulled in when compiling the `wasm` feature.
wasm-bindgen = { version = "0.2", optional = true }

# OS-specific dependencies: excluded from wasm32 builds.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2.183"
